--- a/thankyou.htm
+++ b/thankyou.htm
@@ -14,11 +14,9 @@
 <body>
 	<div class="bg">
 
-    <section id="logo" class="section">
-      <figure>
-        <img src="logo.png">
-      </figure>
-    </section>
+    <figure id="logo">
+      <img src="logo.png">
+    </figure>
 
 		<div id="thanks" class="content is-size-6">Thanks, you are now </div>
 		<div id="devices" class="content is-size-6">authorized on WiFi</div>
